# qt_Sandbox

TheTest/: CMakeLists.txt  Test.cpp  Test.h  main.cpp  main.qml
